force-app/main/default/objects/Eval_Quote__c/Eval_Quote__c.object-meta.xml
<CustomObject>
    <description>Eval Quote Custom Object</description>
    <label>Eval Quote</label>
    <nameField>
        <displayFormat>EvalQuote-{000000}</displayFormat>
        <label>Eval Quote Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Eval Quotes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>