force-app/main/default/objects/Eval_Quote__c/fields/Billing_City__c.field-meta.xml
<CustomField>
    <fullName>Billing_City__c</fullName>
    <inlineHelpText>Billing City</inlineHelpText>
    <label>Billing City</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>