force-app/main/default/objects/Eval_Quote__c/fields/Billing_Company_Name__c.field-meta.xml
<CustomField>
    <fullName>Billing_Company_Name__c</fullName>
    <inlineHelpText>Billing Company</inlineHelpText>
    <label>Billing Company Name</label>
    <length>200</length>
    <required>true</required>
    <type>Text</type>
</CustomField>