force-app/main/default/objects/Eval_Quote__c/fields/Billing_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>Billing_Contact_Email__c</fullName>
    <inlineHelpText>Eval Quote Contact Email</inlineHelpText>
    <label>Billing Contact Email</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>