force-app/main/default/objects/Eval_Quote__c/fields/Billing_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Billing_Contact_Name__c</fullName>
    <label>Billing Contact Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>