force-app/main/default/objects/Eval_Quote__c/fields/Billing_Contact_Phone__c.field-meta.xml
<CustomField>
    <fullName>Billing_Contact_Phone__c</fullName>
    <inlineHelpText>Contact Phone</inlineHelpText>
    <label>Billing Contact Phone</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>