force-app/main/default/objects/Eval_Quote__c/fields/Billing_Country__c.field-meta.xml
<CustomField>
    <fullName>Billing_Country__c</fullName>
    <inlineHelpText>Billing Country</inlineHelpText>
    <label>Billing Country</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>