force-app/main/default/objects/Eval_Quote__c/fields/Billing_State__c.field-meta.xml
<CustomField>
    <fullName>Billing_State__c</fullName>
    <label>Billing State</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>