force-app/main/default/objects/Eval_Quote__c/fields/Billing_Street__c.field-meta.xml
<CustomField>
    <fullName>Billing_Street__c</fullName>
    <inlineHelpText>Billing Street</inlineHelpText>
    <label>Billing Street</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>