force-app/main/default/objects/Eval_Quote__c/fields/Billing_Zip_Postal__c.field-meta.xml
<CustomField>
    <fullName>Billing_Zip_Postal__c</fullName>
    <inlineHelpText>Zip or Postal Code</inlineHelpText>
    <label>Billing Zip/Postal</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>