force-app/main/default/objects/Eval_Quote__c/fields/Days_since_Quote_PO_returned__c.field-meta.xml
<CustomField>
    <fullName>Days_since_Quote_PO_returned__c</fullName>
    <formula>today() -  Quote_PO_Returned__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days since Quote/PO returned</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>