force-app/main/default/objects/Eval_Quote__c/fields/Eval_Quote_Sent_Out__c.field-meta.xml
<CustomField>
    <fullName>Eval_Quote_Sent_Out__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Eval Quote Sent Out</label>
    <type>Checkbox</type>
</CustomField>