force-app/main/default/objects/Eval_Quote__c/fields/Eval_Quote_Status__c.field-meta.xml
<CustomField>
    <fullName>Eval_Quote_Status__c</fullName>
    <defaultValue>&quot;New&quot;</defaultValue>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>Return Quote/PO</label>
            </value>
            <value>
                <fullName>PO Received</fullName>
                <label>Waiting for Invoice Creation</label>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>Invoiced</fullName>
                <isActive>false</isActive>
                <label>Invoiced</label>
            </value>
            <value>
                <fullName>Needs Correction</fullName>
                <isActive>false</isActive>
                <label>Needs Correction</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>