force-app/main/default/objects/Eval_Quote__c/fields/Eval_Request__c.field-meta.xml
<CustomField>
    <fullName>Eval_Request__c</fullName>
    <label>Eval Request</label>
    <referenceTo>Eval_Request__c</referenceTo>
    <relationshipLabel>Eval Quotes</relationshipLabel>
    <relationshipName>Eval_Quotes</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>