force-app/main/default/objects/Eval_Quote__c/fields/EvalOwnerEmail__c.field-meta.xml
<CustomField>
    <fullName>EvalOwnerEmail__c</fullName>
    <formula>Eval_Request__r.Owner:User.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>EvalOwnerEmail</label>
    <type>Text</type>
</CustomField>