force-app/main/default/objects/Eval_Quote__c/fields/Products__c.field-meta.xml
<CustomField>
    <fullName>Products__c</fullName>
    <label>Products</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>