force-app/main/default/objects/Eval_Quote__c/fields/Quote_Closed__c.field-meta.xml
<CustomField>
    <fullName>Quote_Closed__c</fullName>
    <label>Quote Closed</label>
    <type>Date</type>
</CustomField>