force-app/main/default/objects/Eval_Quote__c/fields/Quote_PO_Returned__c.field-meta.xml
<CustomField>
    <fullName>Quote_PO_Returned__c</fullName>
    <label>Quote/PO Returned</label>
    <type>Date</type>
</CustomField>