force-app/main/default/objects/Eval_Quote__c/fields/Quote_Sent__c.field-meta.xml
<CustomField>
    <fullName>Quote_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Quote Sent</label>
    <type>Checkbox</type>
</CustomField>