force-app/main/default/objects/Eval_Quote__c/fields/RMA__c.field-meta.xml
<CustomField>
    <fullName>RMA__c</fullName>
    <formula>Eval_Request__r.RMA__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RMA</label>
    <type>Text</type>
</CustomField>