force-app/main/default/objects/Eval_Quote__c/fields/SubmittedbyEmail__c.field-meta.xml
<CustomField>
    <fullName>SubmittedbyEmail__c</fullName>
    <formula>CreatedBy.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SubmittedbyEmail</label>
    <type>Text</type>
</CustomField>