force-app/main/default/objects/Eval_Quote__c/listViews/Quotes.listView-meta.xml
<ListView>
    <fullName>Quotes</fullName>
    <columns>NAME</columns>
    <columns>Eval_Request__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Mine</filterScope>
    <label>Quotes</label>
</ListView>